--- a/NGender/README-NGender-Emacs.org
+++ b/NGender/README-NGender-Emacs.org
@@ -29,63 +29,100 @@ functionality of the package.
 - [[ngender-sql-connect.el]] :: Connect SQLi to Database
 - [[ox-tiki.el]] :: Tiki Wiki Back-End for Org Export Engine
 
-** Compile Log Wednesday 21 March 2018
+** Compile Log Tue Mar 27 14:37:52 PDT 2018
 
-Compiling file /home/greg/.emacs.d/NGender/ngender-c.el at Wed Mar 21 23:56:04 2018
-ngender-c.el:16:36:Warning: reference to free variable
+
+Compiling file /home/greg/.emacs.d/NGender/ngender-c.el at Tue Mar 27 14:31:39 2018
+ngender-c.el:15:36:Warning: reference to free variable
     ‘ngender-default-indent’
 
-In ngender-c-mode-common-hook:
-ngender-c.el:48:24:Warning: reference to free variable
+In ngender-c-mode:
+ngender-c.el:48:20:Warning: reference to free variable
     ‘ngender-default-indent’
-
-Compiling file /home/greg/.emacs.d/NGender/ngender-cedet.el at Wed Mar 21 23:56:14 2018
-ngender-cedet.el:17:7:Warning: assignment to free variable
+
+Compiling file /home/greg/.emacs.d/NGender/ngender-cedet.el at Tue Mar 27 14:32:33 2018
+ngender-cedet.el:15:7:Warning: assignment to free variable
     ‘my-semantic-submodes’
-ngender-cedet.el:27:18:Warning: reference to free variable
+ngender-cedet.el:25:18:Warning: reference to free variable
     ‘my-semantic-submodes’
 
 In end of data:
-ngender-cedet.el:95:1:Warning: the following functions are not known to be defined:
+ngender-cedet.el:103:1:Warning: the following functions are not known to be defined:
     semantic-load-enable-primary-ectags-support,
     ede-enable-generic-projects
+
+Compiling file /home/greg/.emacs.d/NGender/ngender-clisp.el at Tue Mar 27 14:33:39 2018
+
+Compiling file /home/greg/.emacs.d/NGender/ngender-clojure.el at Tue Mar 27 14:33:41 2018
+ngender-clojure.el:17:7:Warning: assignment to free variable
+    ‘cider-repl-popup-stacktraces’
 
-Compiling file /home/greg/.emacs.d/NGender/ngender-clisp.el at Wed Mar 21 23:56:19 2018
+In end of data:
+ngender-clojure.el:69:1:Warning: the following functions are not known to be defined:
+    ngender-package-loaded, ngender-update-union
+
+Compiling file /home/greg/.emacs.d/NGender/ngender-elisp.el at Tue Mar 27 14:35:03 2018
+
+Compiling file /home/greg/.emacs.d/NGender/ngender-haskell.el at Tue Mar 27 14:35:41 2018
+
+Compiling file /home/greg/.emacs.d/NGender/ngender-mozart.el at Tue Mar 27 14:35:53 2018
+
+Compiling file /home/greg/.emacs.d/NGender/ngender-org.el at Tue Mar 27 14:35:59 2018
+
+Compiling file /home/greg/.emacs.d/NGender/ngender-php.el at Tue Mar 27 14:36:09 2018
+
+Compiling file /home/greg/.emacs.d/NGender/ngender-prolog.el at Tue Mar 27 14:36:14 2018
+
+Compiling file /home/greg/.emacs.d/NGender/ngender-rust.el at Tue Mar 27 14:36:23 2018
 
-Compiling file /home/greg/.emacs.d/NGender/ngender-clojure.el at Wed Mar 21 23:56:22 2018
+In rust-mode-ngender:
+ngender-rust.el:24:8:Warning: ‘racer-activate’ is an obsolete function; use
+    ‘racer-mode’ instead.
+ngender-rust.el:27:4:Warning: ‘racer-turn-on-eldoc’ is an obsolete function;
+    use ‘eldoc-mode’ instead.
 
-Compiling file /home/greg/.emacs.d/NGender/ngender-elisp.el at Wed Mar 21 23:56:23 2018
+In end of data:
+ngender-rust.el:49:1:Warning: the function ‘racer-complete-or-indent’ is not
+    known to be defined.
+
+Compiling file /home/greg/.emacs.d/NGender/ngender-rx.el at Tue Mar 27 14:36:26 2018
+
+Compiling file /home/greg/.emacs.d/NGender/ngender-scala.el at Tue Mar 27 14:36:29 2018
+ngender-scala.el:8:1:Error: Cannot open load file: No such file or directory, ensime
+
+Compiling file /home/greg/.emacs.d/NGender/ngender-shell.el at Tue Mar 27 14:36:31 2018
+
+Compiling file /home/greg/.emacs.d/NGender/ngender-sql-connect.el at Tue Mar 27 14:36:34 2018
 
-Compiling file /home/greg/.emacs.d/NGender/ngender-haskell.el at Wed Mar 21 23:56:24 2018
+In ngender-sql-connect:
+ngender-sql-connect.el:97:49:Warning: reference to free variable ‘my-sql-pw’
+
+Compiling file /home/greg/.emacs.d/NGender/ngender-sql.el at Tue Mar 27 14:36:44 2018
+ngender-sql.el:138:1:Warning: Unused lexical argument ‘matches’
 
-Compiling file /home/greg/.emacs.d/NGender/ngender-mozart.el at Wed Mar 21 23:56:24 2018
+In sql-startup:
+ngender-sql.el:321:9:Warning: assignment to free variable
+    ‘buffer-face-mode-face’
 
-Compiling file /home/greg/.emacs.d/NGender/ngender-org.el at Wed Mar 21 23:56:25 2018
+In sql-outline-minor-mode:
+ngender-sql.el:347:9:Warning: assignment to free variable
+    ‘variable-pitch-mode’
 
-Compiling file /home/greg/.emacs.d/NGender/ngender-php.el at Wed Mar 21 23:56:26 2018
-
-Compiling file /home/greg/.emacs.d/NGender/ngender-prolog.el at Wed Mar 21 23:56:26 2018
-
-Compiling file /home/greg/.emacs.d/NGender/ngender-rust.el at Wed Mar 21 23:56:27 2018
-
-Compiling file /home/greg/.emacs.d/NGender/ngender-rx.el at Wed Mar 21 23:56:28 2018
-ngender-rx.el:823:1:Warning: Lexical argument shadows the dynamic variable
-    rx-parent
-
-Compiling file /home/greg/.emacs.d/NGender/ngender-shell.el at Wed Mar 21 23:56:31 2018
-
-Compiling file /home/greg/.emacs.d/NGender/ngender-sql-connect.el at Wed Mar 21 23:56:32 2018
-ngender-sql-connect.el:7:1:Error: Loading file /home/greg/.emacs.d/NGender/ngender-rx.elc failed to provide feature ‘ngender-rx’
-
-Compiling file /home/greg/.emacs.d/NGender/ngender-sql.el at Wed Mar 21 23:56:33 2018
-ngender-sql.el:9:1:Error: Loading file /home/greg/.emacs.d/NGender/ngender-rx.elc failed to provide feature ‘ngender-rx’
-
-Compiling file /home/greg/.emacs.d/NGender/ngender.el at Wed Mar 21 23:56:35 2018
+In end of data:
+ngender-sql.el:384:1:Warning: the function ‘sql-args-list’ is not known to be
+    defined.
+
+Compiling file /home/greg/.emacs.d/NGender/ngender-workgroups.el at Tue Mar 27 14:36:47 2018
+
+Compiling file /home/greg/.emacs.d/NGender/ngender.el at Tue Mar 27 14:36:50 2018
 
 In ngender-union-list:
 ngender.el:68:17:Error: ‘add-to-list’ can’t use lexical var ‘bag’; use ‘push’
     or ‘cl-pushnew’
 ngender.el:98:1:Warning: Unused lexical variable ‘d’
+
+In ngender-pitch-mode:
+ngender.el:211:11:Warning: assignment to free variable ‘variable-pitch-mode’
 ngender.el:245:1:Warning: Unused lexical argument ‘n’
 
 In lbd-ps-landscape:
@@ -93,6 +130,23 @@ ngender.el:308:9:Warning: assignment to free variable ‘ps-landscape-mode’
 
 In lbd-ps-portrait:
 ngender.el:314:9:Warning: assignment to free variable ‘ps-landscape-mode’
-
-Compiling file /home/greg/.emacs.d/NGender/ox-tiki.el at Wed Mar 21 23:56:37 2018
+
+Compiling file /home/greg/.emacs.d/NGender/ox-tiki.el at Tue Mar 27 14:36:56 2018
 ox-tiki.el:316:1:Warning: Unused lexical variable ‘struct’
+
+
+Compiling no file at Tue Mar 27 14:38:54 2018
+Leaving directory ‘/home/greg/.emacs.d/JGD’
+
+Compiling file /home/greg/.emacs.d/JGD/jgd.el at Tue Mar 27 14:39:06 2018
+Entering directory ‘/home/greg/.emacs.d/JGD/’
+
+In variable-pitch-mode-jgd:
+jgd.el:217:9:Warning: assignment to free variable ‘variable-pitch-mode’
+jgd.el:598:7:Warning: assignment to free variable ‘org-capture-templates’
+
+In lbd-ps-landscape:
+jgd.el:720:9:Warning: assignment to free variable ‘ps-landscape-mode’
+
+In lbd-ps-portrait:
+jgd.el:726:9:Warning: assignment to free variable ‘ps-landscape-mode’
