--- a/README.org
+++ b/README.org
@@ -1,28 +1,325 @@
-* Emacs Configuration Directory: ~/.emacs.d
+* NGender Emacs Configuration Directory
 
-This directory is managed with git.
-It is expected to work on any account with an up-to-date Emacs
-This means that any host-specific features need to be expressed conditionally!
+This Directory Tree is a Git Repository.
 
-Notes:
+** The Purpose of this Repository
+
+Much of the power of [[https://www.gnu.org/software/emacs][Emacs]] is do to its extraordinarily
+customizability through settings and extentions.  Many of
+the most powerful of the extensions, which are available
+from Emacs Package Repositories are themselves highly
+configurable.  Many of the extensions are also designed to
+be combined and/or layered.
+
+We would like to make configuring and extending Emacs easier
+for Users, especially Power Users and especially Power Users
+who are willing to do simple editing of configuration files.
+
+We would *also* like to make it easier for these Power Users
+to share what they have done with other members of their
+Shared Projects, Groups and with the Emacs Community at
+large.
+
+The files in this Repository are designed to make
+Customizing Emacs more convenient by
+- adding and configuring desirable extra packages
+- setting variables to further customize Emacs features
+- defining additional functions and variables
+- adding keymaps for invoking functions more conveniently
+
+In addition it is desired that the customizations in this
+repository can be
+- shared by many people
+- improved by many users for the benefit of all
+- independent of any individual users' tastes
+- easily configured to each user's taste!
+
+This is a project of *RPTUG*, the
+- Radical Productivity Tools Users Group
+- [[https://ngender.org/tiki-index.php?page=RPTUG+Creation+Project]]
+
+It is expected to work well
+- on any account
+- on any operating system supporting Emacs
+- with any up-to-date Emacs
+
+** Layout of the Repository
+
+- ~/.emacs :: a tiny file to get things started, never needs changing
+- ~/.emacs.d/ :: holds main Emacs Configuration
+- ~/.emacs.d/init.el :: a tiny file setting the load path, rarely needs changing
+- ~/.emacs.d/custom-file.el :: stores Emacs Customization System changes
+- ~/.emacs.d/NGender/ :: files shared with Emacs Community, on Emacs "path"
+- ~/.emacs.d/NGender/ngender.el :: core extension loaded by "init.el" file
+- ~/.emacs.d/NGender/ngender-NAME.el :: file managing extension NAMD
+- ~/.emacs.d/User-Me/ :: individual extensions, on Emacs "path"
+- ~/.emacs.d/User-Me/init-me.el :: loaded by "init.el" after "ngender.el"
+- ~/.emacs.d/Group-NAME/ :: extensions shared with given group/project, on "path"
+- ~/.emacs.d/init-examples.el :: snippets to copy/paste into "init-me.el" file
+
+
+** Installing This Repository
+
+1. Clone or otherwise download this repository into a convenient location on your filesystem, say ~Emacs-Config~
+2. You will need a modern Emacs installed, version 25 or later
+3. Find your existing Emacs Customizations, e.g.
+	- the file ~.emacs~
+	- the directory ~.emacs.d/~
+4. Create a directory under ~Emacs-Config~ for your things, say ~User-Me/~
+	- the .gitignore file in this Git Repository ignores files with prefix ~User-~ or ~Group-~
+5. Move your existing emacs Customizations to ~User-Me/~
+6. Create links (shortcuts) to the new customization files
+	- link ~Emacs-Config/.emacs~ to where you had your ~.emacs~
+	- link ~Emacs-Config/.emacs.d/~ to where you had your ~.emacs.d/~
+7. Copy ~Emacs-Config/.init-sample.el~ to ~Emacs-Config/.init.el~
+8. Edit your ~Emacs-Config/.init.el~ as described in its comments
+9. Create an empty file named ~init-me.el~ under your ~User-Me~ directory
+10. Check that Emacs is happy with this new configuration
+11. Fix any problems - let us know with an issue?
+12. Byte-Compile the files in the NGender/ subdirectory
+13. Transfer any old configurations you like to the new places
+	- if you have a lot, do this a small amount at a time
+	- personal things should go in ~init-me.el~
+	- consider putting fancy things in separate files
+14. Improve things as long as you use Emacs
+	- read the README and other files under NGender/
+	- study ~init-examples.el~ for ideas
+	- submit a pull request with your improvements
+	- especially for things you've done under NGender/
+
+If you're on a Linux, Unix or BSD system (some modifications
+may be needed on a Macintosh) you can do this from your
+shell with something like this:
+#+BEGIN_SRC shell
+which emacs # this needs to find your emacs program
+emacs --version # this needs to be version 25 or higher
+cd ~/Gits # where you want to keep this repository - and maybe others?
+git clone https://github.com/GregDavidson/EmacsProfile.git
+cd EmacsProfile # the directory you just cloned
+mkdir User-Me # Keep prefix "User-", keep or change "Me" as you like
+mv ~/.emacs User-Me
+mv ~/.emacs.d User-Me
+ln -s `pwd`/.emacs `pwd`/.emacs.d  ~
+# some shells, e.g. bash, let you use ~+ instead of `pwd`
+cp init-sample.el init.el
+# if you changed User-Me, change it in init.el
+touch User-Me
+# Check that Emacs starts up OK:
+emacs --debug-init
+# If emacs didn't like things, fix them somehow!
+# Once emacs is happy with this vanilla-flavored configuration:
+# C-u 0 M-x byte-recompile-directory Emacs-Profile/NGender/
+# Restart Emacs to make sure it's still happy
+# Carefully (small amounts at a time?) transfer any of your old
+# configurations, if any, from your old config files
+#+END_SRC
+
+If you're installing this Emacs Profile under Microsoft
+Windows and you're successful, please consider submitting a
+pull request with instructions for how to do that.
+
+
+** Current Status of this Project
+
+This project is currently being evolved from a small number
+of large customization files which have served the needs of
+- JGD = J. Greg Davidson
+by separating out logically cohesive customizations into
+small files under the New Subdirectory
+- ~/.emacs.d/NGender/
+Any files which are specific to the needs and tastes of a
+particular user should be put in sibling subdirectories.
+Feel free to examine the files under
+- ~/.emacs.d/JGD/
+for examples.
+
+Eventually
+- ~/.emacs.d/init.el
+will only need to
+1. set the Emacs Load Path variable ~path~
+2. load ngender
+3. load ~init-me~
+
+Eventually all that should remain should be
+- The 2-lines of code (+ comments) of ~init-sample.el~
+- The snippets of ~init-examples.el~
+
+
+*** Current Challenges
+
+**** Individual vs. Group/Project vs. Community
+
+***** Community Level
+
+Everything under NGender is intended to be helpful for any
+Emacs User.  Where a policy is applied there's a variable
+which can alter it.
+
+***** Individual Level
+
+Everything under User-Me is ignored by the Repository.  To
+manage this with Git, it can be created as a separate Git
+repository, e.g. by doing:
+#+BEGIN_SRC
+cd ~/Gits  # wherever you keep your repositories
+mv Emacs-Repository/User-Me Emacs-User-Me
+cd Emacs-User-Me
+git init
+cp ~/Gits/Emacs-Repository/.gitignore .
+# delete anything unwanted from .gitignore
+cd ~/Gits/Emacs-Repository
+ln -s ~/Gits/Emacs-User-Me User-Me
+#+END_SRC
+
+As improvements at this level are better understood, it may
+be appropriate to move some of them to the NGender
+repository and submit a pull request!
+
+***** Project/Group Level
+
+Customizations for Projects and Groups can be created as
+separate repositories just as shown in the Individual Level
+Above.  They can be linked in under Emacs-Repository as,
+e.g. Group-NAME and activated by
+- our .gitignore says to ignore files with prefix ~Group-~
+- adding them to ~*my-paths*~ in ~init.el~ _before_ the ~User-Me~ path
+- adding any customization for them to one's ~init-me.el~ file
+
+Host the Project/Group repository where other members of the
+Project or Group can find it.  Ask the other members to
+participate in the improvement of it.  Move anything which
+is more generic than the Project or Group to the NGender
+repository and submit a pull request!
+		
+**** custom-file.el issues
+
+The Emacs Customization system is the natural mechanism for
+Emacs Users who are reluctant to use Emacs Lisp to make
+their changes.
+
+Should we use defcustom for the ngender-* module variables?
+We're currently not doing so because of philosophical
+problems with the Emacs Customization System.
+
+Problems with the Emacs Customization System
+- It's difficult to browse changes vs. defaults
+	- does not play nicely with git
+- It's difficult to know the purpose and scope of changes
+	- no mechanism for tagging changes with
+		- which project(s) needed it
+		- which system or location needed it
+		- the scope, i.e. individual/project,community
+	- no comment system
+
+Currently custom-file.el is going into the git repository
+- handy for propagating such to all one's accounts
+- difficult when the changes are inappropriate!
+
+Ideally customizations settings would be moved to an
+appropriate initialization file, documented and perhaps
+controlled by some simple or sophisticated Emacs Lisp code.
+
+**** sql-connect issues
+
+There are some host-specific parts of various files, e.g.
+jgd/jgd-sql-connect.el
+
+There is also the sensitive account and password parts of
+such connections.
+
+Some parts should be moved to Project Repositories.
+
+Code should be added which stiches together the Individual
+(account/password) and Project (database names, database
+password?) parts.
+
+Only the stiching code should be in the NGender-sql
+directory, along with pulling in the appropriate packages
+and making them nice.
+
+Needed: Easily customizable examples of how to write the
+Project and Individual sql files.
+
+**** automating byte-recompilation
+
+How do I ensure that byte-recompilation happens automatically?
+
+Let's add a function to ngender.el to call
+~byte-recompile-directory~ with suitable options.
+
+**** NGendering use of Emacs-Server
+
+Let's add an ngender-emacs-server.el file which does
+byte-recompiles and any other slow things and then starts
+the Emacs Server.
+
+** Rationale for the Curious
+
+*** Configuration Files
+
+When emacs starts up Emacs will look for a configuration
+file in your Home Directory as specified by the environment
+variable HOME.  Emacs understands any path beginning with
+tilde slash (~/) starts from your Home Directory.
+
+Emacs will take the first file it finds in the list
+1. ~/.emacs
+2. ~/.emacs.d/init.el
+and load it, i.e. Emacs will treat the contents of that file
+as Emacs-Lisp code (so it better be that) and Emacs will
+execute that code.
+
+Therefore, if you have *both* files, Emacs will, by default, ignore your
+- ~/.emacs.d/
+directory and everything in it!
+
+It would seem that it's simpler to just not have a
+- ~/.emacs
+file but unfortunately that will interfere with
+the Emacs Customization System.
+
+**** House-Breaking the Emacs Customization System and .emacs
+
+By default, the Emacs Customization system will add Emacs
+Lisp Code to your ~/.emacs file whenever you use it to change
+the value of any Emacs Variable creating with ~defcustom~,
+which includes most of the variables used to customize the
+features of Emacs Packages and of the Emacs Core.
+
+Objectives:
+1. Have all Emacs Customizations under
+- ~/.emacs.d/
+2. Have all Emacs ~defcustom~ Customizations under
+- ~/.emacs.d/custom-file.el
+
+Solution:
+
+Have ~/.emacs be a symbolic link (shortcut) to
+- ~/.emacs.d/.emacs
+Under Linux, Unix or BSD you would do this with the commands
+- mv -i ~/.emacs ~/.emacs.d/.emacs
+- ln -s .emacs.d/.emacs ~/.emacs
+
+Move any automatically generated code from
+- ~/.emacs.d/.emacs
+to the new file
+- ~/.emacs.d/custom-file.el
+See the example in this directory!
+
+Your ~/.emacs.d/.emacs file will need the lines:
+#+BEGIN_SRC emacs-lisp
+(load "~/.emacs.d/init.el" nil t)
+(setq custom-file "~/.emacs.d/custom-file.el")
+(load custom-file t t)
+#+END_SRC
+and needn't contain anything else.
+
+?  Typically the file
+- ~/.emacs
+will exist and within it will be a line like
+- ~(load "~/.emacs.d/init.el" nil t)~
+
+The directory .emacs.d/ is only a convention.  Emacs is designed to look for configuration files
 
 1. It's expected that ~/.emacs links to ~/.emacs.d/.emacs
 2. (setq custom-file "~/.emacs.d/custom-file.el")
-
-Problems:
-
-1. There are some host-specific parts of various files, e.g.
-jgd/jgd-sql-connect.el
-
-2. custom-file.el
-- Customization settings changes seem rather unstable
-- I'd rather have some of these in my .el files
-- How am I going to curate & propagage changes to this file?
-
-3. I should split the parts of this which apply to jgd from the
-parts which might work well for anyone.
-
-4. How do I ensure that byte-recompilation happens automatically?
-
-I could use (byte-recompile-directory) with suitable options
-when I start my emacs server.
