--- a/README.org
+++ b/README.org
@@ -50,13 +50,13 @@ It is expected to work well
 - ~/.emacs.d/ :: holds main Emacs Configuration
 - ~/.emacs.d/init.el :: sets load-path, loads two files, rarely needs changing
 - ~/.emacs.d/custom-file.el :: Emacs Customization System settings
-- ~/.emacs.d/NGender/ :: files shared with Emacs Community, on Emacs +load-path++
-- ~/.emacs.d/NGender/ngender.el :: core extension loaded by +init.el+ file
+- ~/.emacs.d/NGender/ :: files shared with Emacs Community, on Emacs ~load-path~~
+- ~/.emacs.d/NGender/ngender.el :: core extension loaded by ~init.el~ file
 - ~/.emacs.d/NGender/ngender-NAME.el :: file managing extension NAMD
-- ~/.emacs.d/User-Me/ :: individual extensions, on Emacs +load-path+
-- ~/.emacs.d/User-Me/init-me.el :: loaded by +init.el+ after +ngender.el+
-- ~/.emacs.d/Group-NAME/ :: extensions shared with given group/project, on +load-path+
-- ~/.emacs.d/init-examples.el :: snippets to copy/paste into +init-me.el+ file
+- ~/.emacs.d/User-Me/ :: individual extensions, on Emacs ~load-path~
+- ~/.emacs.d/User-Me/init-me.el :: loaded by ~init.el~ after ~ngender.el~
+- ~/.emacs.d/Group-NAME/ :: extensions shared with given group/project, on ~load-path~
+- ~/.emacs.d/init-examples.el :: snippets to copy/paste into ~init-me.el~ file
 
 
 ** Installing This Repository
